--- a/MH4930 Notes/week 11.tex
+++ b/MH4930 Notes/week 11.tex
@@ -222,8 +222,7 @@
     Simply apply the assumption on the LES in group cohomology. The isomorphism comes from the exactness.
 \end{proof}
 
-\newpage
-\subsection{Induced Module, }
+\subsection{Induced Module}
 
 \begin{defn} [Induced module]
     Let $H$ be a subgroup of $G$, then $\Z H$ is a subalgebra (subring) of $\Z G$. Let $A$ be an $H$-module. We define the induced $G$-module by
