--- a/MH4930 Notes/main.tex
+++ b/MH4930 Notes/main.tex
@@ -12,6 +12,7 @@
 \usepackage{amsthm}
 \usepackage{amsfonts, dsfont}
 \usepackage[T1]{fontenc}
+\usepackage{mathtools, extpfeil}
 
 % for better cross-reference workflow
 %\usepackage{showlabels}
