--- a/MH4930 Notes/week 6.tex
+++ b/MH4930 Notes/week 6.tex
@@ -8,13 +8,14 @@
         where $r_i\in \Z$ and $b_i\in B$. But since order of $x$ is $n$, so we have
         \[x = (n+1)x = x = r_1(n+1)b_1 + \dots + r_m(n+1)b_m\]
         Note $(n+1)r_i \neq r_i$ in $\Z$, so this gives non-unique representation of $x$. Since projective $\Z$-module are direct summand of free $\Z$-modules, any projective $\Z$-module does not contain non-zero element of finite order.
-        \item The previous example shows that, in general, finite abelian groups are not projective.
-        \item The $\Z$-module $\Q/\Z$ is torsion. I.e for any $x\in \Q/\Z$, there exists $n\in \Z$ such that $nx=0$. In particular, if $x = r/s + \Z$, take $n=s$ and we have
+        \item The previous example shows that all finite abelian groups are not projective.
+        \item The $\Z$-module $\Q/\Z$ is torsion, i.e. for any $x\in \Q/\Z$, there exists $n\in \Z$ such that $nx=0$. In particular, if $x = r/s + \Z$, take $n=s$ and we have
         \[s\br{\frac{r}{s} + \Z} = r + \Z = \Z\]
-        So $\Q/\Z$ is not projective. The SES
+        So $\Q/\Z$ is not projective by the first example. From the characterization of projective modules, the SES
         \[0 \to \Z\to \Q \to \Q/\Z \to 0\]
         does not split. If not, then $\Q/\Z$ is a direct summand of $\Q$. Since $\Q/\Z$ contains non-zero element of finite order, it implies that so is $\Q$, which is clearly contradiction.
-        \item $\Q$ is not a projective $\Z$-module.
+        \item $\Q$ is not a projective $\Z$-module. This follows from the fact that, if $R$ is an integral domain, then torsion implies not projective. Since $\Z$ is an integral domain and $\Q$ is torsion, so $\Q$ is not projective as a $\Z$-module.
+        \item Following previous example, if $R$ is not an integral domain, we can have $R$-module that is torsion yet projective. Consider $R=\Z/6\Z$ as the regular module. Clearly $R$ is not an integral domain since $\bar{2}\cdot \bar{3}=0$. Also $\Z/6\Z$ is clearly torsion, since for every $\bar{x}$ we have $6\cdot \bar{x} = 0$. Lastly, we see that $R = R\sbr{1}$, so $R$ is free of rank $1$. Free implies projective, so $\Z/6\Z$ is an example of torsion module that is projective.
         \item A finitely generated module over a $\Z$ is projective if and only if it is free. Free implies projective is clear. Assuming that it is projective. By the Classification of Finitely Generated Module over PID, an finitely generated $\Z$-module $M$ is isomorphic with 
         \[\Z^n \bigoplus \text{ direct sum of finite copies of finite cyclic groups}\]
         The direct sum of finite cyclic groups part contains elements of finite order. By assumption $M$ is projective, so there must be no non-zero elements of finite order in $M$, implying that the direct sum of finite cyclic groups must be $0$. This shows that 
@@ -35,7 +36,7 @@
     is exact for every $V$.
 \end{thm}
 \begin{proof}
-    Suppose that $X\xto{\alpha} Y \xto{\beta} Z\to 0$ is exact. We first show that $\beta^*$ is injective. Let $f\in \ker \beta^*$, so $\beta^*(f) = f\circ \beta = 0$ is the zero map. In other words, for all $y\in Y$ we have $f(\beta(y))=0$. By assumption $\beta$ is surjective, thus let for all $z\in Z$, let $y_z\in Y$ be such that $\beta(y_z) = z$, and so $f(z) = f(\beta(y)) = 0$. This shows that $f$ must be a zero map.
+    Suppose that $X\xto{\alpha} Y \xto{\beta} Z\to 0$ is exact. We first show that $\beta^*$ is injective. Let $f\in \ker \beta^*$, so $\beta^*(f) = f\circ \beta = 0$ is the zero map, i.e. for all $y\in Y$ we have $f(\beta(y))=0$. By assumption $\beta$ is surjective, thus for all $z\in Z$, let $y_z\in Y$ be such that $\beta(y_z) = z$, and so $f(z) = f(\beta(y)) = 0$. This shows that $f$ must be a zero map, so $\ker \beta^*$ is trivial.
 
     Next, we show that $\im \beta^* \subseteq \ker \alpha^*$. This is simple, simply follow:
     \[\alpha^*(\beta^*(f)) = \alpha^* (f\circ \beta) = f\circ \beta \circ \alpha = f\circ (\beta \circ \alpha) \overset{(*)}{=} f\circ (0) = 0\]
@@ -44,30 +45,30 @@
     Then, we show that $\ker \alpha^* \subseteq \im \beta^*$. Let $g\in \ker \alpha^*$, i.e. $\alpha^* (g) = g \circ \alpha = 0$ is the zero map. Note that $\beta$ is surjective, so for every $z\in Z$ we let $y_z\in Y$ be such that $\beta(y_z)=z$. Then, we define $f:Z\to V$ such that $z\mapsto g(y_z)$. We claim that $\beta^*(f) = g$. 
     \begin{itemize}
         \item First we show $f$ is well-defined. Suppose given $z$, let $y_z, y_z'\in Y$ be such that $\beta(y_z')=z = \beta(y_z)$. This implies $\beta(y_z-y_z')=0$ and so $y_z - y_z'\in \ker \beta = \im \alpha$. So let $x\in X$ such that $\alpha(x) = y_z - y_z'$. Recall that $g\circ \alpha$ is the zero map by assumption, thus $g(y_z-y_z') = g(\alpha(x)) = 0$. This shows that $g(y_z) = g(y_z')$, showing that $f$ is indeed well-defined.
-        \item Next we show that $f$ is an $R$-module homomorphism. Let $z, z'\in Z$ and let $y_z, y_{z'}\in Z$ such that $\beta(y_z) = z$ and $\beta(y_{z'}) = z'$, implying that $\beta(y_z+y_{z'}) = z+z'$. Therefore, by definition of the map $f$, we have $f(z) = g(y)$ and $f(z') = g(y_{z'})$. To show additivity:
+        \item Next we show that $f$ is an $R$-module homomorphism. Let $z, z'\in Z$ and let $y_z, y_{z'}\in Z$ such that $\beta(y_z) = z$ and $\beta(y_{z'}) = z'$, implying that $\beta(y_z+y_{z'}) = z+z'$. Therefore, by definition of the map $f$, we have $f(z) = g(y_z)$ and $f(z') = g(y_{z'})$. To show additivity:
         \[f(z+z') = g(y_z+y_{z'}) \overset{(**)}{=} g(y_z) + g(y_{z'}) = f(z) + f(z')\]
-        where at $(**)$ it is valid to split since by assumption $g$ is $R$-modole homomorphism by assumption. Next, for the action, let $r\in R$. Note $\beta(ry_z) = r\beta(y_z) = rz$, so
+        where at $(**)$ it is valid to split since by assumption $g$ is $R$-module homomorphism. Next, let $r\in R$. Note $\beta(ry_z) = r\beta(y_z) = rz$, so
         \[ f(rz) = g(ry_z) = rg(y_z) = f(z)\]
         This shows that $f$ is a $R$-module homomorphism.
         \item Lastly, suppose again given $z$, let $y_z\in Y$ be such that $\beta(y_z) = z$. So $(\beta^*(f))(y_z) = f(\beta(y_z)) = f(z) = g(y)$. This shows that $\beta^*(f) = g$.
     \end{itemize}
-    This proves the first part of the statement.
+    This proves the first statement.
 
-    For the second statement, the forward direction is a immediate result of the first statement, so it suffices to show the backward direction is true. Suppose as assumed in the statement. First we show that $\beta$ is surjective. Consider 
-    \[V := Z/\im \beta\]
-    In other words, take $V= \text{coker}\ \beta$. Let $\pi:Z\to V$ be the canonical surjection. Then $\beta^*(\pi) = \pi\circ \beta$, so $(\beta^*(\pi))(y) = (\pi\circ \beta)(y) = \pi(\beta(y))$. Since $\beta(y)\in \im \beta$. so $(\beta^*(\pi))(y) = \overline{0}$. This means that $\beta^*(\pi)=0$. Since $\beta^*$ is injective, so $\pi=0$ which means that $V=0$, and so $Z = \im \beta$. This shows that $\beta$ is surjective.
+    For the second statement, the forward direction is immediate from the first statement, so it suffices to show the backward direction is true. Suppose as assumed in the statement. First we show that $\beta$ is surjective. Consider 
+    \[V := \coker \beta = Z/\im \beta\]
+    Let $\pi:Z\to V$ be the canonical surjection. Then $\beta^*(\pi) = \pi\circ \beta$, so $(\beta^*(\pi))(y) = (\pi\circ \beta)(y) = \pi(\beta(y))$. Since $\beta(y)\in \im \beta$. so $(\beta^*(\pi))(y) = \overline{0}$. This means that $\beta^*(\pi)=0$. Since $\beta^*$ is injective, so $\pi=0$ which means that $V=0$, and so $Z = \im \beta$. This shows that $\beta$ is surjective.
     
-    Next, we show that $\im\alpha \subseteq \ker \beta$. Take $V=Z$, and let $\id_Z$ be the identical map of $Z$. By the assumption of exactness we have $\alpha^*\circ \beta^*$ is zero map. So
+    Next, we show that $\im\alpha \subseteq \ker \beta$. Take $V=Z$, and let $\id_Z$ be the identical map of $Z$. By the assumption of exactness $\alpha^*\circ \beta^*$ is zero map. So
     \[(\alpha^* \circ \beta^*)(\id_Z) = 0 \implies \beta\circ \alpha \circ \id_Z = 0\implies \beta\circ \alpha = 0\]
     This shows that $\im \alpha\subseteq \ker \beta$.
 
-    Lastly, we show that $\ker\beta\subseteq \im \alpha$. Let $V=\text{coker}\ \alpha = Y/\im\alpha$. Let $\pi:Y\to V$ be the canonical surjection. Similar to previous argument, we see that $\alpha^*(\pi) = \pi \circ \alpha = 0$ is the zero map, so $\pi \in \ker \alpha^* = \im \beta^*$ due to exactness. Let $g\in Z\to V$ such that $\beta^*(g) = g\circ \beta=\pi$. Then for every $y\in \ker \beta$, we see that
+    Lastly, we show that $\ker\beta\subseteq \im \alpha$. Let $V=\text{coker}\ \alpha = Y/\im\alpha$. Let $\pi:Y\to V$ be the canonical surjection. Similar to previous argument, we see that $\alpha^*(\pi) = \pi \circ \alpha = 0$ is the zero map, so $\pi \in \ker \alpha^* = \im \beta^*$ due to exactness. Let $g\in \h_R(Z, V)$ such that $\beta^*(g) = g\circ \beta=\pi$. Then for every $y\in \ker \beta$, we see that
     \[(g\circ \beta)(y) = \pi(y) \implies g(\beta(y)) = \pi(y) \implies g(0) = \pi(y) \implies \pi(y) = 0\]
     By definition of canonical surjection $\pi$, we have that $y\in \im \alpha$. So $\ker \beta \subseteq \im \alpha$. The proof is completed.
 \end{proof}
 
 \begin{defn} [Injective modules]
-    Let $Q$ be an $R$-module. We say that $Q$ is injective if for any injective $R$-homomorphism $\varphi:Z\to Y$ and $R$-homomorphism $g:Z\to Q$, there exists $f:Y\to Q$ such that $f\circ \varphi = g$, i.e. we have the following commutative diagram
+    Let $Q$ be an $R$-module. We say that $Q$ is injective if for any injective $R$-module homomorphism $\varphi:Z\to Y$ and $R$-module homomorphism $g:Z\to Q$, there exists $f:Y\to Q$ such that $f\circ \varphi = g$, i.e. we have the following commutative diagram
     \[\begin{tikzcd} [sep = small]
 	&& Q \\
 	\\
@@ -82,6 +83,14 @@
     Let $Q$ be an $R$-module.
     \begin{enumerate}
         \item (Baer's Criterion) The module $Q$ is injective if and only if for every left ideal $I$ of $R$ and any $R$-module homomorphism $g:I\to Q$, there exists $R$-module homomorphism $f:R\to Q$ such that $g = f\circ \iota$, where $\iota:I\hookrightarrow R$ is the inclusion map.
+        \[\begin{tikzcd} [sep = small]
+	    && Q \\
+	    \\
+	    R && I
+	    \arrow["{\exists f}", dashed, from=3-1, to=1-3]
+	    \arrow["g"', from=3-3, to=1-3]
+	    \arrow["\iota", hook', from=3-3, to=3-1]
+    \end{tikzcd}\]
         \item If $R$ is a PID, then $Q$ is injective if and only if $Q$ is divisible (i.e. for every $r\in R$ is non-zero, we have $rQ=Q$). When $R$ is a PID, quotients of injective $R$-modules are injective.
     \end{enumerate}
 \end{pro}
@@ -155,9 +164,9 @@
     \hfill
 
     \begin{enumerate}
-        \item $Q$ is injective $\Z$-module because $\Q$ is divisible. However $\Z$ is not injective $\Z$-module because $2\Z \neq \Z$. But $\Z$ is a free module, so $\Q/\Z$ is injective module. Recall we have seen that $\Q/\Z$ is not projective.
+        \item Over any ring $R$, any injective $R$-module is divisible.
+        \item Note $\Z$ is a PID. Applying the previous proposition, $\Q$ is an injective $\Z$-module because $\Q$ is divisible. However $\Z$ is not an injective $\Z$-module because $2\Z \neq \Z$. Also, since $\Z$ is PID, so quotients of injective $\Z$-module are injective, thus $\Q/\Z$ is injective. Recall we have seen that $\Q/\Z$ is not projective.
         \item Let $F$ be a field. Then any $F$-module is injective.
-        \item Over any ring $R$, any injective $R$-module is divisible. 
     \end{enumerate}
 \end{ex}
 
@@ -169,15 +178,15 @@
 \begin{proof}
     Let $M$ be a $\Z$-module and let $F(A)$ surjects onto $M$ via $\pi$. This induces an isomorphism $\varphi$ such that
     \[F(A)/\ker \pi \overset{\varphi}{\cong} M\]
-    Let $Q = \bigoplus_{a\in A} \Q$ be a free $Q$-module. Consider $\Q$ as a $\Z$-module. For any $n\in \Z$ is non-zero, and $\br{\frac{r_a}{s_a}}_{a\in A} \in Q$, we have
+    Let $Q = \bigoplus_{a\in A} \Q$ be a free $\Z$-module, where we consider $\Q$ as a $\Z$-module. For any $n\in \Z\setminus\sbr{0}$ and $\br{\frac{r_a}{s_a}}_{a\in A} \in Q$, we have
     \[\br{\frac{r_a}{s_a}}_{a\in A} = n\br{\frac{r_a}{ns_a}}_{a\in A}\]
-    So $Q$ is injective $\Z$-module. 
+    So $Q$ is divisible, and thus $Q$ is an injective $\Z$-module. 
 
-    Next, observe that $\ker\pi \subseteq F(A) \cong \bigoplus_{a\in A} \Z$ and we can embeed $\bigoplus_{a\in A} \Z$ into $Q$ via the following inclusion map
+    Next, observe that $\ker\pi \subseteq F(A) \cong \bigoplus_{a\in A} \Z$ and we can embed $F(A) \cong \bigoplus_{a\in A} \Z$ into $Q$ via the following inclusion map
     \[\iota:(n_a)_{a\in A} \mapsto \br{\frac{n_a}{1}}_{a\in A}\]
     Since $Q$ is injective, so $Q/\ker \pi$ is injective by the second statement of Proposition \ref{pro: Baer} (note $\Z$ is PID). Together, we see that 
     \[M\cong \frac{F(A)}{\ker\pi} \overset{\iota'}{\hookrightarrow} \frac{Q}{\ker\pi}\]
-    where the inclusion $\iota'$ is induced by $\iota$. This proves that $M$, as a $\Z$-module, is a submodule of $Q/\ker \pi$, an injective $\Z$-module.
+    where the inclusion $\iota'$ is induced by $\iota$. This proves that $M$, as a $\Z$-module, is a submodule of an injective $\Z$-module $Q/\ker \pi$
 \end{proof}
 
 \begin{thm}
@@ -186,17 +195,17 @@
 \begin{proof}
     Let $M$ be an $R$-module. By treating $M$ as a $Z$-module, by Corollary \ref{cor: Z-mod sub inj}, it is a sub-module of an injective $\Z$-module, say $Q$. Note that $\h_Z(R,M) \subseteq \h_Z(R,Q)$ due to the following arguments:
     \begin{itemize}
-        \item Since $M\subseteq Q$, we have the exact sequence $0\to M \xto{\iota} Q/M$.
-        \item This gives rise to the exact sequence $0 \to \h_\Z(R,M) \xto{\iota_*} \h_\Z(R,Q) \to \h_\Z(R,Q/M)$. 
+        \item Since $M\subseteq Q$, we have the exact sequence $0\to M \xto{\iota} Q \xto{\pi} Q/M$.
+        \item This gives rise to the exact sequence $0 \to \h_\Z(R,M) \xto{\iota_*} \h_\Z(R,Q) \xto{\pi_*} \h_\Z(R,Q/M)$. 
         \item This shows that $\h_\Z(R,M) \subseteq \h_\Z(R,Q)$.
     \end{itemize}
-    On the other hand, recall that $\h_R(R,M) \cong M$, and since it is clear that $\h_R(R,M) \subseteq \h_\Z(R,M)$, we have the following:
-    \[M\cong \h_R(R,M)\subseteq \h_\Z(R,M) \subseteq \h_\Z(R,Q) \implies M\subseteq \h_\Z(R,Q)\]
-    And we will show that $\h_\Z(R,Q)$ is an injective $R$-module.
+    On the other hand, recall that $\h_R(R,M) \cong M$. Also it is clear that $\h_R(R,M) \subseteq \h_\Z(R,M)$. Altogether, we have the following:
+    \[M\cong \h_R(R,M)\subseteq \h_\Z(R,M) \subseteq \h_\Z(R,Q)\]
+    which summarizes into $M\subseteq \h_\Z(R,Q)$. We now show that $\h_\Z(R,Q)$ is an injective $R$-module.
     
-    Firstly , note we can view $\h_\Z(R,Q)$ as an $R$-module via the $R$-action $(r\cdot \varphi)(x) = \varphi(xr)$, which is valid since we can impose the $(\Z,R)$-bimodule struction to $R$. 
+    Firstly , note we can view $\h_\Z(R,Q)$ as an $R$-module via the $R$-action $(r\cdot \varphi)(x) = \varphi(xr)$, which is valid since we can impose the $(\Z,R)$-bimodule structure to $R$. 
     
-    Next, to show that $\h_\Z(R,Q)$ is an injective $R$-module, let $X$ and $Y$ be any $R$-modules, and let $\alpha:X\hookrightarrow Y$ be an injective $R$-module homomorphism, and let $g:X \to \h_\Z(R,Q)$ be an $R$-module homomorphism. We want to show that there exists a $R$-module homomorphism that commutes the following diagram:
+    Next, to show that $\h_\Z(R,Q)$ is injective, let $X$ and $Y$ be any $R$-modules. Let $\alpha:X\hookrightarrow Y$ be an injective $R$-module homomorphism, and let $g:X \to \h_\Z(R,Q)$ be an $R$-module homomorphism. We want to show that there exists a $R$-module homomorphism that commutes the following diagram:
     \[\begin{tikzcd} [sep = small]
 	X && Y \\
 	\\
@@ -209,7 +218,7 @@
     \begin{itemize}
         \item It suffices to show that it is an abelian group homomorphism. By definition $X$ and $Q$ are abelian groups. Note then $g'(x+x') = (g(x+x'))(1) = (g(x) + g(x'))(1) = (g(x))(1) + (g(x'))(1) = g'(x) + g'(x')$. Thus $g'$ is a $\Z$-module homomorphism.
     \end{itemize}
-    By assumption $Q$ is an injective $\Z$-homomorphism, so there exists $f'$ is a $\Z$-module homomorphism such that the following diagram commutes:
+    Since $Q$ is an injective $\Z$-module, so there exists a $\Z$-module homomorphism $f'$ such that the following diagram commutes:
     \[\begin{tikzcd} [sep = small]
 	X && Y \\
 	\\
@@ -218,7 +227,7 @@
 	\arrow["g'"', from=1-1, to=3-1]
 	\arrow["\exists f'",dashed, from=1-3, to=3-1]
     \end{tikzcd}\]
-    In particular $f'\circ \alpha = g'$. Define $f:Y\to \h_Z(R,Q)$ by $y \mapsto f_y$ such that $f_y$ is defined by $f_y:r\mapsto f'(ry)$. We show that $f$ is an $R$-module homomorphism:
+    i.e. $f'\circ \alpha = g'$. Define $f:Y\to \h_\Z(R,Q)$ by $y \mapsto f_y$ such that $f_y$ is defined to be the map $f_y:r\mapsto f'(ry)$. We show that $f$ is an $R$-module homomorphism:
     \begin{itemize}
         \item We claim $f$ is well-defined, i.e. $f_y \in \h_\Z(R,Q)$. It suffices to show that $f_y$ is an abelian group homomorphism. Note $f_y(r+r') = f'((r+r')y) = f'(ry + r'y) = f'(ry) + f(r'y) = f_y(r) + f_y(r')$. Thus $f(y) = f_y$ is indeed a $\Z$-module homomorphism.
         \item To show additivity: $(f(y+y'))(r) = f_{y+y'}(r) = f'(r(y+y')) = f'(ry + ry') = f'(ry) + f'(ry') = f_y(r) + f_{y'}(r) = (f_y + f_{y'})(r) = (f(y) + f(y'))(r)$.
@@ -247,7 +256,7 @@
 	\arrow["g"', from=1-1, to=3-1]
 	\arrow["\exists f", dashed, from=1-3, to=3-1]
     \end{tikzcd}\]
-    Therefore $\h_Z(R,Q)$ is an injective $R$-module. This completes the proof.
+    Therefore $\h_\Z(R,Q)$ is an injective $R$-module. This completes the proof.
 \end{proof}
 
 
